--- a/ai-golf-booking/.env.example
+++ b/ai-golf-booking/.env.example
@@ -1,6 +1,6 @@
 # OpenAI API Key
 # Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_API_KEY=''
 
 # Server Configuration
 PORT=3001
