--- a/ai-golf-booking/package.json
+++ b/ai-golf-booking/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "multer": "^2.0.2",
     "openai": "^6.6.0",
     "react": "^19.1.1",
