--- a/ai-golf-booking/.env.example
+++ b/ai-golf-booking/.env.example
@@ -1,9 +1,8 @@
-# OpenAI API Key
-# Get your API key from: https://platform.openai.com/api-keys
+# OpenAI API Configuration
 OPENAI_API_KEY=your-openai-api-key-here
 
 # Server Configuration
 PORT=3001
 
-# Vite Configuration
-VITE_API_URL=http://localhost:3001
+# Node Environment
+NODE_ENV=development
